--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
 This is the source code of paper "Feature-based POI Grouping with Transformer for Next POI Recommendation".
+If you need more information, you can send me an email at heyuhang_hyh@163.com.
