--- a/readme
+++ b/readme
@@ -1,2 +1,2 @@
-This is the source code of paper "Feature-based POI Grouping with Transformer for Next POI Recommendation".
+This is the source code of paper "Feature-based POI Grouping with Transformer for Next Point of Interest Recommendation", https://doi.org/10.1016/j.asoc.2023.110754.
 If you need more information, you can send me an email at heyuhang_hyh@163.com.
